toc added to conference page, anchor link padding fixed

--- a/content/2013.md
+++ b/content/2013.md
@@ -9,7 +9,7 @@ conference-page: true
 draft: false
 ---
 
-### Introduction
+# Introduction
 The first SUMO User Conference "SUMO2013" was attended by 30 participants from throughout Europe which presented three days of simulation results but also technical enhancements and new usage scenarios of the open source microscopic traffic simulation. The highlights were two keynote speakers, Christoph Sommer (Universitaet Innsbruck) and Kai Nagel (TU Berlin), which talked about the current developments in the simulation of vehicle communication, one of the main applications of SUMO, as well as experience with the development of MatSim. The program was rounded off by numerous discussions on the edge and a panel discussion, which will promote further exchanges among other simulation scenarios.
 
 The [Springer postproceedings issue of LNCS](http://www.springer.com/de/book/9783662450789) is now online. The updated [conference proceedings](http://sumo.dlr.de/2013/SUMO2013_15-17May%202013_Berlin-Adlershof.pdf) are available for download as well.
@@ -27,7 +27,7 @@ Here are some impression of the SUMO2013
 </div>
 
 
-### Conference Information
+# Conference Information
 Traffic simulations are of immense importance for researchers as well as practitioners in the field of transportation. SUMO has been available since 2001 and provides a wide range of traffic planing and simulation applications. SUMO consists of a suite of tools covering road network imports and enrichment, demand generation and assignment and a state-of-the-art microscopic traffic simulation capable to simulate private and public transport modes, as well as person-based trip chains. Being open, SUMO is also ready to implement new behavioral models or to control the simulation remotely using various programming environments.
 
 These and other features make SUMO one of the most used traffic simulations with a large and international user community. Further information about SUMO can be found at the project's web pages located at <http://sumo.sf.net>.
@@ -36,7 +36,7 @@ The conference aims on exchanging experience in using SUMO, and presenting resul
 
 There is [a flyer containing most of the important informations](http://sumo.dlr.de/2013/SUMO2013.pdf). You can find [the detailed program here](http://sumo.dlr.de/2013/Program_SUMO2013.pdf).
 
-### Contact
+# Contact
 Please contact the conference team via mail at [SUMO2013@dlr.de](mailto:SUMO2013@dlr.de)
 
 The postal address is:
