--- a/content/2014.md
+++ b/content/2014.md
@@ -9,7 +9,7 @@ conference-page: true
 draft: false
 ---
 
-### Introduction
+# Introduction
 The SUMO2014 Conference was attended by over 50 participants from throughout Europe and America which presented two days of simulation results but also technical enhancements and new usage scenarios of the open source microscopic traffic simulation ([Here](http://sumo.dlr.de/2014/Proceeding_SUMO2014_15+16May2014_Berlin-Adlershof.pdf) you can find the conference proceedings). A highlight was the keynote speaker Mario Krumnow (Technical University Dresden), who talked about "Modeling Mobility with Open Data" (here you can find his [presentation](http://sumo.dlr.de/2014/Krumnow-OpenData2014.pdf) and [simulation](http://sumo.dlr.de/2014/Krumnow-Simulation.zip)). The program was rounded off by numerous discussions on the edge and a panel discussion, which will promote further exchanges among other simulation scenarios.
 
 **All those who contributed to the SUMO2014 conference:**   
@@ -24,12 +24,12 @@ Here are the participants of the SUMO2014
   <img src="../images/conference_2014.jpg" style="width:600px;" alt="Conference image" class="img-responsive" />
 </div>
 
-##### For participants:
+**For participants:**
 
 On your usb-drive you received a simulation scenario which is compatible with the upcoming release 0.21.0. You can find a version that is compatible with version 0.20.0 at the following location: [download](http://sourceforge.net/projects/sumo/files/traffic_data/scenarios/iTETRIS_Bologna/iTETRIS_Bologna_joined-0.20.0.zip/download)
 
 
-### Sessions and Presentations
+# Sessions and Presentations
 Please find below the sessions of the conference with presentations linked where available.
 
 **Traffic Light Systems**
@@ -77,12 +77,12 @@ Please find below the sessions of the conference with presentations linked where
 * [Traffic simulation for all: a real world traffic scenario from the city of Bologna](http://sumo.dlr.de/2014/Presentation_open_scenarios_LauraBieker.pdf) (Laura Bieker)
 
 
-### Conference Information
+# Conference Information
 Traffic simulations are of immense importance for researchers as well as practitioners in the field of transportation. SUMO has been available since 2001 and provides a wide range of traffic planing and simulation applications. SUMO consists of a suite of tools covering road network imports and enrichment, demand generation and assignment and a state-of-the-art microscopic traffic simulation capable to simulate private and public transport modes, as well as person-based trip chains. Being open, SUMO is also ready to implement new behavioral models or to control the simulation remotely using various programming environments.
 
 These and other features make SUMO one of the most used traffic simulations with a large and international user community. Further information about SUMO can be found at the project's web pages located at <http://sumo-sim.org/>.
 
-### Contact
+# Contact
 Please contact the conference team via mail at [sumo-conference@dlr.de](mailto:sumo-conference@dlr.de)
 
 The postal address is:
