--- a/content/2019.md
+++ b/content/2019.md
@@ -14,10 +14,10 @@ draft: false
   <img src="../images/conference_2019.jpg" style="width:100%;" alt="Conference participants" class="img-responsive" />
 </div>
 
-### Introduction
+# Introduction
 Traffic simulations are of immense importance for researchers as well as practitioners in the field of transportation. Eclipse SUMO provides a wide range of traffic planning and simulation applications. Eclipse SUMO is a toolsuite covering road network imports and enrichment, demand generation and assignment and a state-of-the-art microscopic traffic simulation capable to simulate private and public transport modes, as well as person-based trip chains. Being open source, Eclipse SUMO is ready to implement new behavioral models or to control the simulation remotely using various programming environments. These and other features make Eclipse SUMO one of the most often used open source traffic simulations with a large and international user community.
 
-### Call for Papers
+# Call for Papers
 The conference aims on presenting new and unique results in the field of mobility simulation and modelling using openly available tools and data. We expect a large variety of research topics and usage approaches. If you are doing a research project fitting the topics below you are kindly invited to submit an abstract. Possible areas of interest include (but are not limited to):  
 
 - Vehicular Communication
@@ -37,17 +37,17 @@ Authors are requested to register at Easy Chair <https://easychair.org/conferenc
 
 Instructions for authors and a template can be found here: <https://easychair.org/publications/for_authors>. 
 
-### Keynote Speaker
+# Keynote Speaker
 [Peter Vortisch](https://www.ifv.kit.edu/mitarbeiter_158.php) (KIT – Institut für Verkehrswesen IfV)
 
-### Prices
+# Prices
 
 - Regular Tickets – 495 EUR
 - One-Day-Ticket – 325 EUR
 - Authors and Project Partners – 275 EUR
 - "limited" Student Grants - 50 EUR
 
-### Sessions and Presentations
+# Sessions and Presentations
 
 **Session 1: Automated Vehicles**
 
@@ -105,23 +105,23 @@ Instructions for authors and a template can be found here: <https://easychair.or
 - Introducing Road Surface Conditions into a Microscopic Traffic Simulation
 - Reinforcement Learning Agent under Partial Observability for Traffic Light Control in Presence of Gridlocks
 
-### Registration
+# Registration
 The registration fee includes a two and a half day conference program with refreshments, lunch, proceedings and social events in the evening. Accommodation is not included within the registration fee and must be pre-booked separately. **Register [here](https://sumo2019.besl-eventservice.de/front/index.php)**.
 
-### Language
+# Language
 The conference language is English.
 
-### Social Event
+# Social Event
 We are having a social event on Monday May 13 at BTB (<https://www.btb-berlin.de/>), 2019 at 6 p.m. and on Tuesday May 14, 2019 (barbecue at the DLR Berlin-Adlershof).
 
-### Venue
+# Venue
 German Aerospace Center   
 Institute of Transportation Systems   
 Rutherfordstr. 2   
 12489 Berlin   
 Germany
 
-### Contact
+# Contact
 Please contact the conference team via mail at [sumo-conference@dlr.de](mailto:sumo-conference@dlr.de)   
 You can find more information about SUMO at <https://sumo.dlr.de>
 
