--- a/content/2020.md
+++ b/content/2020.md
@@ -14,11 +14,11 @@ draft: false
   <img src="../images/conference_2020.png" style="width:100%;" alt="Conference participants" class="img-responsive" />
 </div>
 
-### Introduction
+# Introduction
 Traffic simulations are of immense importance for researchers as well as practitioners in the field of transportation. SUMO has been available since 2001 and provides a wide range of traffic planning and simulation applications. SUMO consists of a suite of tools covering road network imports and enrichment, demand generation and assignment, and a state-of-the-art microscopic traffic simulator capable of simulating private and public transport modes, as well as person-based trip chains. Being open source, SUMO is easily extensible by new behavioral models and can be dynamically controlled via a well-defined programming interface. These and other features make SUMO one of the most often used open source traffic simulators with a large and international user community.
 
 
-### Call for Papers
+# Call for Papers
 The conference focuses on presenting new and unique results in the field of mobility simulation and modeling using openly available tools and data. We expect a large variety of research topics and usage approaches. If you are working on a research project fitting the topics below, you are kindly invited to submit an abstract. Possible areas of interest include (but are not limited to):
 
 - Mobility and Demand Modelling
@@ -33,7 +33,7 @@ The conference focuses on presenting new and unique results in the field of mobi
 - Vehicular Communication
 - E-Mobility
 
-### Sessions and Presentations
+# Sessions and Presentations
 - Tutorial • [<i class="fab fa-youtube"></i> Video](https://youtu.be/aiOQbaB-pWo)
 - Ask us anything • [<i class="far fa-file-alt"></i> Q&A Chat](https://sumo.dlr.de/2020/chat_QA.txt)
 - **Keynote:** Emerging mobility trends and the role of transport simulation models - *Jordi Casas* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=vJe-2T73UOg)
@@ -138,22 +138,22 @@ The conference focuses on presenting new and unique results in the field of mobi
 You can find all videos here: <a href="https://www.youtube.com/playlist?list=PLy7t4z5SYNaSbneWArP9heFSFI2ARNZrM"><button type="button" class="btn btn-danger btn-sm"><i class="fab fa-youtube"></i> YouTube playlist</button></a>
 
 
-### Social Event
+# Social Event
 
 We are going to have a fun SUMO-related quiz using [Menti](https://www.menti.com/). Join our Zoom meeting and have a smartphone/tablet ready at hand. Test your knowledge of SUMO and win the glorious and prestigious prize of attaching your name to an easter egg in “sumo-gui”.
 
 
-### Language
+# Language
 The conference language is English.
 
 
-### Prices
+# Prices
 Participation at this year's conference will be **free of charge**!
 
 
-### Venue
+# Venue
 Given the extraordinary situation we are facing, this year's SUMO User Conference will be **online** via [Zoom](https://zoom.us/download#client_4meeting).   
 
-### Contact
+# Contact
 
 Please contact the conference team via mail at [sumo-conference@dlr.de](mailto:sumo-conference@dlr.de)
