major design refinements

--- a/content/2018.md
+++ b/content/2018.md
@@ -5,14 +5,10 @@ conferenceDate: "May 14-16"
 conferenceLocation: "Berlin-Adlershof, Germany"
 description : "Get in touch with our international user community"
 layout: "single"
+image: "conference_2018.jpg"
 conference-page: true
 draft: false
 ---
-
-<!-- image -->
-<div class="container-fluid text-center" style="padding:0 !important;">
-  <img src="../images/conference_2018.jpg" style="width:100%;" alt="Conference image" class="img-responsive" />
-</div>
 
 # Introduction
 Traffic simulations are of immense importance for researchers as well as practitioners in the field of transportation. SUMO has been available since 2001 and provides a wide range of traffic planning and simulation applications. SUMO consists of a suite of tools covering road network imports and enrichment, demand generation and assignment and a state-of-the-art microscopic traffic simulation capable to simulate private and public transport modes, as well as person-based trip chains. Being open source, SUMO is ready to implement new behavioral models or to control the simulation remotely using various programming environments. These and other features make SUMO one of the most often used open source traffic simulations with a large and international user community.
