--- a/content/2019.md
+++ b/content/2019.md
@@ -5,14 +5,10 @@ conferenceDate: "May 13-15"
 conferenceLocation: "Berlin-Adlershof, Germany"
 description : "Get in touch with our international user community"
 layout: "single"
+image: "conference_2019.jpg"
 conference-page: true
 draft: false
 ---
-
-<!-- head image -->
-<div class="container-fluid" style="padding:0 !important;">
-  <img src="../images/conference_2019.jpg" style="width:100%;" alt="Conference participants" class="img-responsive" />
-</div>
 
 # Introduction
 Traffic simulations are of immense importance for researchers as well as practitioners in the field of transportation. Eclipse SUMO provides a wide range of traffic planning and simulation applications. Eclipse SUMO is a toolsuite covering road network imports and enrichment, demand generation and assignment and a state-of-the-art microscopic traffic simulation capable to simulate private and public transport modes, as well as person-based trip chains. Being open source, Eclipse SUMO is ready to implement new behavioral models or to control the simulation remotely using various programming environments. These and other features make Eclipse SUMO one of the most often used open source traffic simulations with a large and international user community.
