--- a/content/2020.md
+++ b/content/2020.md
@@ -5,14 +5,10 @@ conferenceDate: "October 26-28"
 conferenceLocation: "Online"
 description : "Get in touch with our international user community"
 layout: "single"
+image: "conference_2020.png"
 conference-page: true
 draft: false
 ---
-
-<!-- head image -->
-<div class="container-fluid" style="padding:0 !important;">
-  <img src="../images/conference_2020.png" style="width:100%;" alt="Conference participants" class="img-responsive" />
-</div>
 
 # Introduction
 Traffic simulations are of immense importance for researchers as well as practitioners in the field of transportation. SUMO has been available since 2001 and provides a wide range of traffic planning and simulation applications. SUMO consists of a suite of tools covering road network imports and enrichment, demand generation and assignment, and a state-of-the-art microscopic traffic simulator capable of simulating private and public transport modes, as well as person-based trip chains. Being open source, SUMO is easily extensible by new behavioral models and can be dynamically controlled via a well-defined programming interface. These and other features make SUMO one of the most often used open source traffic simulators with a large and international user community.
@@ -157,3 +153,7 @@ Given the extraordinary situation we are facing, this year's SUMO User Conferenc
 # Contact
 
 Please contact the conference team via mail at [sumo-conference@dlr.de](mailto:sumo-conference@dlr.de)
+
+---
+
+<div class="text-center"><img src="../images/banner_2020.png" style="width:70%;" alt="Conference artwork" class="img-responsive"/></div>
