--- a/content/2016.md
+++ b/content/2016.md
@@ -5,16 +5,12 @@ conferenceDate: "May 23-25"
 conferenceLocation: "Berlin-Adlershof, Germany"
 description : "Get in touch with our international user community"
 layout: "single"
+image: "conference_2016.jpg"
 conference-page: true
 draft: false
 ---
 
-<!-- image -->
-<div class="container-fluid text-center" style="padding:0 !important;">
-  <img src="../images/conference_2016.jpg" style="width:100%;" alt="Conference image" class="img-responsive" />
-</div>
-
-<div class="btn-group">
+<div class="btn-group" style="margin-bottom:40px;">
   <a href="https://www.dlr.de/ts/en/DownloadCount.aspx?raid=355744&docid=10480&rn=4cd3253a-649d-4fe5-9154-52e4e8e2e803" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2016 Proceedings (23.48 MB)</a>
   <a href="https://www.dlr.de/ts/en/DownloadCount.aspx?raid=354349&docid=10466&rn=a6683f08-7102-4dcf-8e87-3d818f48f30a" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2016 Program (0.77 MB)</a>
 </div>
