--- a/content/2017.md
+++ b/content/2017.md
@@ -5,16 +5,12 @@ conferenceDate: "May 8-10"
 conferenceLocation: "Berlin-Adlershof, Germany"
 description : "Get in touch with our international user community"
 layout: "single"
+image: "conference_2017.jpg"
 conference-page: true
 draft: false
 ---
 
-<!-- image -->
-<div class="container-fluid text-center" style="padding:0 !important;">
-  <img src="../images/conference_2017.jpg" style="width:100%;" alt="Conference image" class="img-responsive" />
-</div>
-
-<div class="btn-group">
+<div class="btn-group" style="margin-bottom:40px;">
   <a href="https://www.dlr.de/ts/en/DownloadCount.aspx?raid=381026&docid=10872&rn=0130dfed-c5cc-4631-97dc-7fa360122297" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2017 Proceedings (21.07 MB)</a>
   <a href="https://www.dlr.de/ts/en/DownloadCount.aspx?raid=417630&docid=11276&rn=ece94a40-92ca-49ad-b54b-ec5b96ce02e9" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2017 Flyer (5.06 MB)</a>
 </div>
