new 2020 videos + new 2021 submission deadline

--- a/content/2020.md
+++ b/content/2020.md
@@ -76,8 +76,8 @@ The conference focuses on presenting new and unique results in the field of mobi
 **Session 4: Micro simulation / other**
 
 - ECN-based Mitigation of Congestion in Urban Traffic Networks - *Levente Alekszejenkó and Tadeusz P. Dobrowiecki* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=5tsTcpOLrLY) • [<i class="far fa-file-pdf"></i> Paper](https://sumo.dlr.de/2020/SUMO2020_paper_26.pdf)
-- Extending the Intelligent Driver Model in SUMO and Verifying the Drive Off Trajectories with Aerial Measurements - *Dominik Salles, Stefan Kaufmann and Hans-Christian Reuss* • [<i class="far fa-file-pdf"></i> Paper](https://sumo.dlr.de/2020/SUMO2020_paper_28.pdf)
-- A Slipstreaming Model for Cooperative Driving Simulations in SUMO - *Andrea Stedile and Michele Segata*
+- Extending the Intelligent Driver Model in SUMO and Verifying the Drive Off Trajectories with Aerial Measurements - *Dominik Salles, Stefan Kaufmann and Hans-Christian Reuss* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=0VuSguxDVv8) • [<i class="far fa-file-pdf"></i> Paper](https://sumo.dlr.de/2020/SUMO2020_paper_28.pdf)
+- A Slipstreaming Model for Cooperative Driving Simulations in SUMO - *Andrea Stedile and Michele Segata* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=ihjJ-9O-tq0)
 
 ---
 
