--- a/content/2020.md
+++ b/content/2020.md
@@ -30,7 +30,7 @@ The conference focuses on presenting new and unique results in the field of mobi
 - E-Mobility
 
 # Sessions and Presentations
-- Tutorial • [<i class="fab fa-youtube"></i> Video](https://youtu.be/aiOQbaB-pWo)
+- Tutorial • [<i class="fab fa-youtube"></i> Video](https://youtu.be/aiOQbaB-pWo) • [<i class="far fa-file-archive"></i> Tutorial files](http://sumo.dlr.de/daily/sumo2020_tutorial.zip)
 - Ask us anything • [<i class="far fa-file-alt"></i> Q&A Transcript](https://sumo.dlr.de/2020/chat_QA.txt)
 - **Keynote:** Emerging mobility trends and the role of transport simulation models - *Jordi Casas* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=vJe-2T73UOg)
 
@@ -138,6 +138,12 @@ You can find all videos here: <a href="https://www.youtube.com/playlist?list=PLy
 
 We are going to have a fun SUMO-related quiz using [Menti](https://www.menti.com/). Join our Zoom meeting and have a smartphone/tablet ready at hand. Test your knowledge of SUMO and win the glorious and prestigious prize of attaching your name to an easter egg in “sumo-gui”.
 
+<div class="alert alert-warning alert-dismissible">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    SUMO guru of the year 2020: m-kro.
+</div>
+
+(Check out the hall of fame, by pressing `Shift` + `F11` in sumo-gui 1.8.0 or newer)
 
 # Language
 The conference language is English.
