Proceedings for 2020 and 2021 added

--- a/content/2021.md
+++ b/content/2021.md
@@ -10,6 +10,11 @@ conference-page: true
 draft: false
 ---
 
+# Proceedings
+
+Conference Proceedings: https://www.tib-op.org/ojs/index.php/scp/issue/view/5   
+DOI: https://doi.org/10.52825/scp.v2i 
+
 # Sessions and Presentations
 - Tutorial • [<i class="fab fa-youtube"></i> Video](https://youtu.be/tlshWdzFWpY) • [<i class="far fa-file-archive"></i> Tutorial files](http://sumo.dlr.de/daily/sumo2021_tutorial.zip)
 - Ask us anything • [<i class="far fa-file-alt"></i> Q&A Transcript](https://sumo.dlr.de/2021/chat_QA.txt)
@@ -20,8 +25,8 @@ draft: false
 **Session 1: V2X**
 
 - Cooperative traffic light control - considering cyclists with the aid of V2I - *Maik Halbach and Kim Jannik Eggers* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/8aC-rL04W68)
-- A Study of Applying Eco-Driving Speed Advisory System on Transit Signal Priority - *Hsuan Chih Wang* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/JInBlui6-N0)
-- Modeling Cellular Network Infrastructure in SUMO - *Anupama Hegde, Ringo Stahl, Silas Lobo and Andreas Festag* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/71R6HURyedc)
+- A Study of Applying Eco-Driving Speed Advisory System on Transit Signal Priority - *Hsuan Chih Wang* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/JInBlui6-N0)  - [<i class="far fa-file-pdf"></i> Paper](https://www.tib-op.org/ojs/index.php/scp/article/view/92)
+- Modeling Cellular Network Infrastructure in SUMO - *Anupama Hegde, Ringo Stahl, Silas Lobo and Andreas Festag* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/71R6HURyedc) - [<i class="far fa-file-pdf"></i> Paper](https://www.tib-op.org/ojs/index.php/scp/article/view/97)
 
 ---
 
@@ -36,7 +41,7 @@ draft: false
 **Session 3: ITS**
 
 - The use of SUMO within the Transportation GeoXchange (TGX) platform - *Arif K. Rafiq, Jeffrey Kirchner, Juliano Kersting, David Stajan and Andrea Zagar* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/y-fvIgjuzj0)
-- Simulation of Demand Responsive Transport using a dynamic scheduling tool with SUMO - *Maria Giuliana Armellini* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/1gG0EwDHtBA)
+- Simulation of Demand Responsive Transport using a dynamic scheduling tool with SUMO - *Maria Giuliana Armellini* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/1gG0EwDHtBA) - [<i class="far fa-file-pdf"></i> Paper](https://www.tib-op.org/ojs/index.php/scp/article/view/100)
 - Traffic Simulation Environment Based on Sumo Software - *Xuhong Li, Liyong Zheng, Bin Su, Xu Guo, Yonggang Hao, Wenjing Li and Xuhong Li*
 
 ---
@@ -46,13 +51,13 @@ draft: false
 - Scenario Analysis for shared autonomous driving fleets with SUMO - *Emanuel Reichsöllner and Andreas Rößler* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/Tut2k8K9J5s)
 - Traffic Simulation of Automated Shuttles in Linköping University Campus - *Rihanna Gebrehiwot, Johan Olstam and Yun-Pang Flötteröd* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/0FEvnc9Bufs)
 - Simulating automated vehicles in high capacity networks - *Joerg Schweizer, Federico Rupi and Cristian Poliziani* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/03LubzFBlIw)
-- Investigation of the effect of autonomous vehicles (AV) on the capacity of an urban transport network - *Ronald Nippold, Peter Wagner, Olaf Angelo Banse Bueno and Christian Rakow* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/64V9T9aXa5I)
+- Investigation of the effect of autonomous vehicles (AV) on the capacity of an urban transport network - *Ronald Nippold, Peter Wagner, Olaf Angelo Banse Bueno and Christian Rakow* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/64V9T9aXa5I) - [<i class="far fa-file-pdf"></i> Paper](https://www.tib-op.org/ojs/index.php/scp/article/view/87)
 
 ---
 
 **Session 5: Emission**
 
-- Online calibration with SUMO for network-wide traffic and emission monitoring – Case study ITS Huainan - *Yun-Pang Flötteröd and Michael Behrisch* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/7o_QwUEX938)
+- Online calibration with SUMO for network-wide traffic and emission monitoring – Case study ITS Huainan - *Yun-Pang Flötteröd and Michael Behrisch* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/7o_QwUEX938) - [<i class="far fa-file-pdf"></i> Paper](https://www.tib-op.org/ojs/index.php/scp/article/view/88)
 - Simulation based method for the analysis of energy-efficient driving algorithms using SUMO - *Benedikt Buhk and Rasmus Rettig* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/T7Fh9nQeADI)
 - Optimising Low-Emissions Zone Geofencing Strategy using SUMO with Vehicle Co-Simulation - *James Manuelyan, Joshua Dalby and Peter Fussey* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/cdUP88FEcPU)
 
@@ -60,9 +65,9 @@ draft: false
 
 **Session 6: Tools**
 
-- Validating a parking lot assignment method by Eclipse SUMO - *Levente Alekszejenkó and Tadeusz P. Dobrowiecki* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/FCvHXxkepv8)
+- Validating a parking lot assignment method by Eclipse SUMO - *Levente Alekszejenkó and Tadeusz P. Dobrowiecki* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/FCvHXxkepv8) - [<i class="far fa-file-pdf"></i> Paper](https://www.tib-op.org/ojs/index.php/scp/article/view/93)
 - High-Fidelity Modeling of Curbside Driving Behavior in SUMO - *Qichao Wang, Joseph Severino, Juliette Ugirumurera and Caleb Phillips* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/B6PguGb2EyQ)
-- A comparison of SUMO’s count based and countless demand generation tools - *Pauline Hartwig and Michael Behrisch* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/o8h8dUrqpTM)
+- A comparison of SUMO’s count based and countless demand generation tools - *Pauline Hartwig and Michael Behrisch* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/o8h8dUrqpTM) - [<i class="far fa-file-pdf"></i> Paper](https://www.tib-op.org/ojs/index.php/scp/article/view/107)
 
 ---
 
@@ -77,14 +82,14 @@ draft: false
 **Session 8: ITS**
 
 - Augmenting SUMO with Ring-and-Barrier Structured Traffic Signal Controller Module - *Qichao Wang, Tianxin Li and Wesley Jones* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/o8BGZZG7TLk)
-- Using Deep Reinforcement Learning to Coordinate Multi-Modal Journey Planning with Limited Transportation Capacity - *Lara Codeca and Vinny Cahill* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/OF--8wm81QQ)
+- Using Deep Reinforcement Learning to Coordinate Multi-Modal Journey Planning with Limited Transportation Capacity - *Lara Codeca and Vinny Cahill* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/OF--8wm81QQ) - [<i class="far fa-file-pdf"></i> Paper](https://www.tib-op.org/ojs/index.php/scp/article/view/89)
 - Last-Mile Logistics Simulation in SUMO - *Fabian Post and El Mehdi Essadki* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/1YYw1-_EF38)
 
 ---
 
 **Session 9: Other traffic modes and models**
 
-- The Development of Pedestrian Gap Acceptance and Midblock Pedestrian Road Crossing Behavior Utilizing SUMO - *Peter Lawrence, Veronica Pellacini, Darren Blackshields and Lazaros Filippidis* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/77_s_CcY4Ck)
+- The Development of Pedestrian Gap Acceptance and Midblock Pedestrian Road Crossing Behavior Utilizing SUMO - *Peter Lawrence, Veronica Pellacini, Darren Blackshields and Lazaros Filippidis* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/77_s_CcY4Ck) - [<i class="far fa-file-pdf"></i> Paper](https://www.tib-op.org/ojs/index.php/scp/article/view/90)
 - Calibrating spatio-temporal network states in microscopic traffic simulation on a global level - *Henriette Triebke, Markus Kromer and Peter Vortisch* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/QzrkIrEllTI)
 - Investigating the Effect of Enabled Mesoscopic Settings within a Sensitivity Analysis - *Christina Presinger* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/3jEh5LZ9NLk)
 
