--- a/content/2020.md
+++ b/content/2020.md
@@ -10,24 +10,10 @@ conference-page: true
 draft: false
 ---
 
-# Introduction
-Traffic simulations are of immense importance for researchers as well as practitioners in the field of transportation. SUMO has been available since 2001 and provides a wide range of traffic planning and simulation applications. SUMO consists of a suite of tools covering road network imports and enrichment, demand generation and assignment, and a state-of-the-art microscopic traffic simulator capable of simulating private and public transport modes, as well as person-based trip chains. Being open source, SUMO is easily extensible by new behavioral models and can be dynamically controlled via a well-defined programming interface. These and other features make SUMO one of the most often used open source traffic simulators with a large and international user community.
+# Proceedings
 
-
-# Call for Papers
-The conference focuses on presenting new and unique results in the field of mobility simulation and modeling using openly available tools and data. We expect a large variety of research topics and usage approaches. If you are working on a research project fitting the topics below, you are kindly invited to submit an abstract. Possible areas of interest include (but are not limited to):
-
-- Mobility and Demand Modelling
-- Traffic Simulation
-- Open Tools and Open Data
-- Modelling Urban Mobility
-- Traffic Applications
-- Traffic Management Solutions
-- Intermodal Transport
-- Autonomous Driving
-- Logistics Simulation
-- Vehicular Communication
-- E-Mobility
+Conference Proceedings: https://www.tib-op.org/ojs/index.php/scp/issue/view/4   
+DOI: https://doi.org/10.52825/scp.v1i
 
 # Sessions and Presentations
 - Tutorial • [<i class="fab fa-youtube"></i> Video](https://youtu.be/aiOQbaB-pWo) • [<i class="far fa-file-archive"></i> Tutorial files](http://sumo.dlr.de/daily/sumo2020_tutorial.zip)
