adding link to the last 2021 paper

--- a/content/2021.md
+++ b/content/2021.md
@@ -74,7 +74,7 @@ DOI: https://doi.org/10.52825/scp.v2i
 **Session 7: Scenarios**
 
 - The impact of heavy vehicles on traffic - *Francois Vaudrin and Mathieu Vaudrin* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/P1lyN8RjG98)
-- Automated Calibration of Traffic Demand and Traffic Lights in SUMO Using Real-World Observations - *Michael Harth, Marcel Langer and Klaus Bogenberger* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/v8595gCXqeg)
+- Automated Calibration of Traffic Demand and Traffic Lights in SUMO Using Real-World Observations - *Michael Harth, Marcel Langer and Klaus Bogenberger* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/v8595gCXqeg) - [<i class="far fa-file-pdf"></i> Paper](https://www.tib-op.org/ojs/index.php/scp/article/view/120)
 - Evaluating time-loss algorithm with SUMO - *Menno van der Woude* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/YANGym2z5vE)
 
 ---
