adding link checker and fixing some links

--- a/src/content/2019.md
+++ b/src/content/2019.md
@@ -102,7 +102,7 @@ Instructions for authors and a template can be found here: <https://easychair.or
 - Reinforcement Learning Agent under Partial Observability for Traffic Light Control in Presence of Gridlocks
 
 # Registration
-The registration fee includes a two and a half day conference program with refreshments, lunch, proceedings and social events in the evening. Accommodation is not included within the registration fee and must be pre-booked separately. **Register [here](https://sumo2019.besl-eventservice.de/front/index.php)**.
+The registration fee includes a two and a half day conference program with refreshments, lunch, proceedings and social events in the evening. Accommodation is not included within the registration fee and must be pre-booked separately.
 
 # Language
 The conference language is English.
