adding some files from the internal repo

--- a/src/content/2020.md
+++ b/src/content/2020.md
@@ -17,7 +17,7 @@ DOI: https://doi.org/10.52825/scp.v1i
 
 # Sessions and Presentations
 - Tutorial • [<i class="fab fa-youtube"></i> Video](https://youtu.be/aiOQbaB-pWo) • [<i class="far fa-file-archive"></i> Tutorial files](http://sumo.dlr.de/daily/sumo2020_tutorial.zip)
-- Ask us anything • [<i class="far fa-file-alt"></i> Q&A Transcript](https://sumo.dlr.de/2020/chat_QA.txt)
+- Ask us anything • [<i class="far fa-file-alt"></i> Q&A Transcript](../documents/2020/chat_QA.txt)
 - **Keynote:** Emerging mobility trends and the role of transport simulation models - *Jordi Casas* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=vJe-2T73UOg)
 
 ---
