--- a/src/content/2022.md
+++ b/src/content/2022.md
@@ -17,7 +17,7 @@ DOI: https://doi.org/10.52825/scp.v3i
 
 # Sessions and Presentations
 - Tutorial • [<i class="fab fa-youtube"></i> Video](https://youtu.be/urKtJj87X5M) • [<i class="far fa-file-archive"></i> Tutorial files](http://sumo.dlr.de/daily/sumo2022_tutorial.zip)
-- Ask us anything • [<i class="far fa-file-alt"></i> Q&A Transcript](https://sumo.dlr.de/2022/chat_QA.txt)
+- Ask us anything • [<i class="far fa-file-alt"></i> Q&A Transcript](../documents/2022/chat_QA.txt)
 - **Keynote:** Simulating and modelling traffic: What are we trying to achieve? - *Heather Kaths* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/HBvuTjUy_kY)
 - TAPAS Workshop - *Matthias Heinrichs* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/twLLWBKRlbg)
 
