--- a/src/content/2021.md
+++ b/src/content/2021.md
@@ -17,7 +17,7 @@ DOI: https://doi.org/10.52825/scp.v2i
 
 # Sessions and Presentations
 - Tutorial • [<i class="fab fa-youtube"></i> Video](https://youtu.be/tlshWdzFWpY) • [<i class="far fa-file-archive"></i> Tutorial files](http://sumo.dlr.de/daily/sumo2021_tutorial.zip)
-- Ask us anything • [<i class="far fa-file-alt"></i> Q&A Transcript](https://sumo.dlr.de/2021/chat_QA.txt)
+- Ask us anything • [<i class="far fa-file-alt"></i> Q&A Transcript](../documents/2021/chat_QA.txt)
 - **Keynote:** Ride-hailing and ride-pooling: State of the art, future research directions, and the role of traffic simulation - *Klaus Bogenberger* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/kQT_mhexuYw)
 
 ---
