--- a/src/content/2014.md
+++ b/src/content/2014.md
@@ -10,7 +10,7 @@ draft: false
 ---
 
 # Introduction
-The SUMO2014 Conference was attended by over 50 participants from throughout Europe and America which presented two days of simulation results but also technical enhancements and new usage scenarios of the open source microscopic traffic simulation ([Here](http://sumo.dlr.de/2014/Proceeding_SUMO2014_15+16May2014_Berlin-Adlershof.pdf) you can find the conference proceedings). A highlight was the keynote speaker Mario Krumnow (Technical University Dresden), who talked about "Modeling Mobility with Open Data" (here you can find his [presentation](http://sumo.dlr.de/2014/Krumnow-OpenData2014.pdf) and [simulation](http://sumo.dlr.de/2014/Krumnow-Simulation.zip)). The program was rounded off by numerous discussions on the edge and a panel discussion, which will promote further exchanges among other simulation scenarios.
+The SUMO2014 Conference was attended by over 50 participants from throughout Europe and America which presented two days of simulation results but also technical enhancements and new usage scenarios of the open source microscopic traffic simulation ([Here](../documents/2014/Proceeding_SUMO2014_15+16May2014_Berlin-Adlershof.pdf) you can find the conference proceedings). A highlight was the keynote speaker Mario Krumnow (Technical University Dresden), who talked about "Modeling Mobility with Open Data" (here you can find his [presentation](../documents/2014/Krumnow-OpenData2014.pdf) and [simulation](../documents/2014/Krumnow-Simulation.zip)). The program was rounded off by numerous discussions on the edge and a panel discussion, which will promote further exchanges among other simulation scenarios.
 
 **All those who contributed to the SUMO2014 conference:**   
 **Thank you for all your excellent work!**
@@ -34,54 +34,54 @@ Please find below the sessions of the conference with presentations linked where
 
 **Traffic Light Systems**
 
-* [Interface Between Proprietary Controllers and SUMO](http://sumo.dlr.de/2014/Presentation_Interface%20between%20proprietary%20controllers%20and%20SUMO_RobbinBlokpoel.pdf) (Robbin Blokpoel)
+* [Interface Between Proprietary Controllers and SUMO](../documents/2014/Presentation_Interface%20between%20proprietary%20controllers%20and%20SUMO_RobbinBlokpoel.pdf) (Robbin Blokpoel)
 * Stochastic Optimization of Advanced Signal Controls using A Parallelized Simulation Framework (Xiaoliang Ma)
-* [Network Conversion for SUMO Integration](http://sumo.dlr.de/2014/Presentation_Network%20conversion%20for%20SUMO%20integration_RobbinBlokpoel.pdf) (Robbin Blokpoel)
+* [Network Conversion for SUMO Integration](../documents/2014/Presentation_Network%20conversion%20for%20SUMO%20integration_RobbinBlokpoel.pdf) (Robbin Blokpoel)
 
 ---
 
 **Map Matching Algorithms**
 
 * Advanced Traffic Light Information in OpenStreetMap for Traffic Simulations (David Rieck)
-* [A Railway Simulation Landscape Creation Tool Chain Considering OpenStreetMap Geo Data](http://sumo.dlr.de/2014/Presentation_RailwaySimulationLandscapeCreation_ChristianRahmig.pdf) (Christian Rahmig)
+* [A Railway Simulation Landscape Creation Tool Chain Considering OpenStreetMap Geo Data](../documents/2014/Presentation_RailwaySimulationLandscapeCreation_ChristianRahmig.pdf) (Christian Rahmig)
 * Map matching and cycling infrastructure analyses with SUMO and python (Joerg Schweizer)
 
 ---
 
 **Intelligent Traffic Agents**
 
-* [A MultiAgent System driving simulator architecture: testing Advanced Driver Assistance Systems](http://sumo.dlr.de/2014/Presentation_TowardsaMobile_JoaoGoncalves.pdf) (Joao Goncalves)
-* [A situational awareness approach to intelligent vehicle agents](http://sumo.dlr.de/2014/Presentation_SitAwarenessVehicles_VincentBaines.pdf) (Vincent Baines)
+* [A MultiAgent System driving simulator architecture: testing Advanced Driver Assistance Systems](../documents/2014/Presentation_TowardsaMobile_JoaoGoncalves.pdf) (Joao Goncalves)
+* [A situational awareness approach to intelligent vehicle agents](../documents/2014/Presentation_SitAwarenessVehicles_VincentBaines.pdf) (Vincent Baines)
 * Methods enabling Simulations of V2X Applications regarding Emergency Vehicles in Urban Environment - Applied to Simulate a Preemption and Automated Cooperative Maneuvers of Individual Vehicles (Michael Duering)
 
 ---
 
 **Keynote Speech**
 
-* [Modeling Mobility with Open Data](http://sumo.dlr.de/2014/Presentation_Keynote_Open%20data%202014_MarioKrumnow.pdf) (Mario Krumnow) [Simulation Data](http://sumo.dlr.de/2014/Krumnow-Simulation.zip)
+* [Modeling Mobility with Open Data](../documents/2014/Presentation_Keynote_Open%20data%202014_MarioKrumnow.pdf) (Mario Krumnow) [Simulation Data](../documents/2014/Krumnow-Simulation.zip)
 
 ---
 
 **Applications**
 
-* [DFROUTER - Route estimate method based on detector data](http://sumo.dlr.de/2014/Presentation_DFROUTER_TeRonNguyen.pdf) (Nguyen Van Te Ron)
-* [Can Road Traffic Volume Information Improve Partitioning for Distributed SUMO?](http://sumo.dlr.de/2014/Presentation_Distributed%20SUMO_UlrichDangel.pdf) (Ulrich Dangel)
-* [TOMS - Traffic Online Monitoring System for ITS Austria West](http://sumo.dlr.de/2014/Presentation_TOMS_PetruPau.pdf) (Petru Pau)
+* [DFROUTER - Route estimate method based on detector data](../documents/2014/Presentation_DFROUTER_TeRonNguyen.pdf) (Nguyen Van Te Ron)
+* [Can Road Traffic Volume Information Improve Partitioning for Distributed SUMO?](../documents/2014/Presentation_Distributed%20SUMO_UlrichDangel.pdf) (Ulrich Dangel)
+* [TOMS - Traffic Online Monitoring System for ITS Austria West](../documents/2014/Presentation_TOMS_PetruPau.pdf) (Petru Pau)
 
 ---
 
 **Applications II**
 
-* [TraCI4Matlab: Re-engineering the Python implementation of the TraCI interface](http://sumo.dlr.de/2014/Presentation_Traci4Matlab_JorgeOviedo.pdf) (Jorge E. Espinosa Oviedo)
-* [Modelling Bluetooth Inquiry for SUMO](http://sumo.dlr.de/2014/Presentation_BluetoothModelling_MichaelBehrisch.pdf) (Michael Behrisch)
+* [TraCI4Matlab: Re-engineering the Python implementation of the TraCI interface](../documents/2014/Presentation_Traci4Matlab_JorgeOviedo.pdf) (Jorge E. Espinosa Oviedo)
+* [Modelling Bluetooth Inquiry for SUMO](../documents/2014/Presentation_BluetoothModelling_MichaelBehrisch.pdf) (Michael Behrisch)
 
 ---
 
 **New Features**
 
-* [2nd Generation of Pollutant Emission Models for SUMO](http://sumo.dlr.de/2014/Presentation_2ndGenEmissions_DanielKrajzewicz.pdf) (Daniel Krajzewicz)
-* [Lane-Changing Model in SUMO](http://sumo.dlr.de/2014/Presentation_LC2013_JakobErdmann.pdf) (Jakob Erdmann)
-* [Traffic simulation for all: a real world traffic scenario from the city of Bologna](http://sumo.dlr.de/2014/Presentation_open_scenarios_LauraBieker.pdf) (Laura Bieker)
+* [2nd Generation of Pollutant Emission Models for SUMO](../documents/2014/Presentation_2ndGenEmissions_DanielKrajzewicz.pdf) (Daniel Krajzewicz)
+* [Lane-Changing Model in SUMO](../documents/2014/Presentation_LC2013_JakobErdmann.pdf) (Jakob Erdmann)
+* [Traffic simulation for all: a real world traffic scenario from the city of Bologna](../documents/2014/Presentation_open_scenarios_LauraBieker.pdf) (Laura Bieker)
 
 
 # Conference Information
