--- a/src/content/2020.md
+++ b/src/content/2020.md
@@ -24,55 +24,55 @@ DOI: https://doi.org/10.52825/scp.v1i
 
 **Eclipse Session**
 
-- Eclipse Foundation • [<i class="far fa-file-pdf"></i> Slides](https://sumo.dlr.de/2020/Eclipse Foundation - Gael Blondelle.pdf)
-- openADx Working Group • [<i class="far fa-file-pdf"></i> Slides](https://sumo.dlr.de/2020/openADx - Andreas Riexinger.pdf)
-- Eclipse ADORe • [<i class="far fa-file-pdf"></i> Slides](https://sumo.dlr.de/2020/Eclipse ADORe - Daniel Hess.pdf)
-- openMobility Working Group • [<i class="far fa-file-pdf"></i> Slides](https://sumo.dlr.de/2020/openMobility - Robert Hilbrich.pdf)
-- Eclipse MOSAIC • [<i class="far fa-file-pdf"></i> Slides](https://sumo.dlr.de/2020/Eclipse MOSAIC - Robert Protzmann.pdf)
+- Eclipse Foundation • [<i class="far fa-file-pdf"></i> Slides](../documents/2020/EclipseFoundation-GaelBlondelle.pdf)
+- openADx Working Group • [<i class="far fa-file-pdf"></i> Slides](../documents/2020/openADx-AndreasRiexinger.pdf)
+- Eclipse ADORe • [<i class="far fa-file-pdf"></i> Slides](../documents/2020/Eclipse ADORe-DanielHess.pdf)
+- openMobility Working Group • [<i class="far fa-file-pdf"></i> Slides](../documents/2020/openMobility-RobertHilbrich.pdf)
+- Eclipse MOSAIC • [<i class="far fa-file-pdf"></i> Slides](../documents/2020/Eclipse MOSAIC-RobertProtzmann.pdf)
 
 ---
 
 **Session 1: Autonomous Vehicles**
 
-- Modeling autonomous dynamic vanpooling services in SUMO by integrating the dynamic routing scheduler - *Moeid Qurashi, Hai Jiang and Constantinos Antoniou* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=Wr96laltPXA) • [<i class="far fa-file-pdf"></i> Paper](https://sumo.dlr.de/2020/SUMO2020_paper_42.pdf)
-- Simulating demand responsive feeder transit services: A case study of Braunschweig - *Maria Giuliana Armellini and Laura Bieker-Walz* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=pNG0PqaYp7g) • [<i class="far fa-file-pdf"></i> Paper](https://sumo.dlr.de/2020/SUMO2020_paper_8.pdf)
+- Modeling autonomous dynamic vanpooling services in SUMO by integrating the dynamic routing scheduler - *Moeid Qurashi, Hai Jiang and Constantinos Antoniou* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=Wr96laltPXA) • [<i class="far fa-file-pdf"></i> Paper](../documents/2020/SUMO2020_paper_42.pdf)
+- Simulating demand responsive feeder transit services: A case study of Braunschweig - *Maria Giuliana Armellini and Laura Bieker-Walz* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=pNG0PqaYp7g) • [<i class="far fa-file-pdf"></i> Paper](../documents/2020/SUMO2020_paper_8.pdf)
 
 ---
 
 **Session 2: AI**
 
-- Computer Simulation Study of Vehicle Type Classification Using Machine Learning Techniques with Mobile Phone Location Data - *Chaninart Eosanurak, Nattida Wongtrakoon, Ei Ei Mon and Chaodit Aswakul* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=DGB9iqq-maE) • [<i class="far fa-file-pdf"></i> Paper](https://sumo.dlr.de/2020/SUMO2020_paper_33.pdf)
+- Computer Simulation Study of Vehicle Type Classification Using Machine Learning Techniques with Mobile Phone Location Data - *Chaninart Eosanurak, Nattida Wongtrakoon, Ei Ei Mon and Chaodit Aswakul* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=DGB9iqq-maE) • [<i class="far fa-file-pdf"></i> Paper](../documents/2020/SUMO2020_paper_33.pdf)
 - AI-based Disposition using a Reinforcement Learning Approach - *Georg Merz* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=h9hxio9_aeo)
 <div class="alert alert-warning alert-dismissible">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
     This presentation was voted <b>best presentation</b>, by the conference attendees.
 </div>
 
-- Concept and first insights of a sequential MATSim-SUMO tool-coupling to deduce representative 24h-velocity-profiles for autonomous vehicles - *Henriette Triebke* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=Y_lG7XV2OEg) • [<i class="far fa-file-pdf"></i> Paper](https://sumo.dlr.de/2020/SUMO2020_paper_44.pdf)
+- Concept and first insights of a sequential MATSim-SUMO tool-coupling to deduce representative 24h-velocity-profiles for autonomous vehicles - *Henriette Triebke* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=Y_lG7XV2OEg) • [<i class="far fa-file-pdf"></i> Paper](../documents/2020/SUMO2020_paper_44.pdf)
 
 ---
 
 **Session 3: Other traffic modes**
 
-- Pedestrian Simulation Methodology of Evacuation in the Area of Cotopaxi’s Lahar Influence with SUMO - *Sebastian Bucheli and Oswaldo Padilla* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=w0jwUQALo-g) • [<i class="far fa-file-pdf"></i> Paper](https://sumo.dlr.de/2020/SUMO2020_paper_40.pdf)
-- Hierarchical delay-based signal coordination for bicycles and motor vehicles traffic - *Seyed Abdollah Hosseini, Georgios Grigoropoulos, Andreas Keler, Fritz Busch and Klaus Bogenberger* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=UcDV5IfqLmw) • [<i class="far fa-file-pdf"></i> Paper](https://sumo.dlr.de/2020/SUMO2020_paper_16.pdf)
-- A Mathematical Programming Based Approach to Evaluate Ramp Metering Deployment Through Eclipse SUMO - *İsmet Gökşad Erdagi, Sercan Akti, Mehmet Ali Silgu and Hilmi Berk Çelikoğlu* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=KDPgvJuXTv0) • [<i class="far fa-file-pdf"></i> Paper](https://sumo.dlr.de/2020/SUMO2020_paper_45.pdf)
+- Pedestrian Simulation Methodology of Evacuation in the Area of Cotopaxi’s Lahar Influence with SUMO - *Sebastian Bucheli and Oswaldo Padilla* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=w0jwUQALo-g) • [<i class="far fa-file-pdf"></i> Paper](../documents/2020/SUMO2020_paper_40.pdf)
+- Hierarchical delay-based signal coordination for bicycles and motor vehicles traffic - *Seyed Abdollah Hosseini, Georgios Grigoropoulos, Andreas Keler, Fritz Busch and Klaus Bogenberger* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=UcDV5IfqLmw) • [<i class="far fa-file-pdf"></i> Paper](../documents/2020/SUMO2020_paper_16.pdf)
+- A Mathematical Programming Based Approach to Evaluate Ramp Metering Deployment Through Eclipse SUMO - *İsmet Gökşad Erdagi, Sercan Akti, Mehmet Ali Silgu and Hilmi Berk Çelikoğlu* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=KDPgvJuXTv0) • [<i class="far fa-file-pdf"></i> Paper](../documents/2020/SUMO2020_paper_45.pdf)
 
 ---
 
 **Session 4: Micro simulation / other**
 
-- ECN-based Mitigation of Congestion in Urban Traffic Networks - *Levente Alekszejenkó and Tadeusz P. Dobrowiecki* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=5tsTcpOLrLY) • [<i class="far fa-file-pdf"></i> Paper](https://sumo.dlr.de/2020/SUMO2020_paper_26.pdf)
-- Extending the Intelligent Driver Model in SUMO and Verifying the Drive Off Trajectories with Aerial Measurements - *Dominik Salles, Stefan Kaufmann and Hans-Christian Reuss* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=0VuSguxDVv8) • [<i class="far fa-file-pdf"></i> Paper](https://sumo.dlr.de/2020/SUMO2020_paper_28.pdf)
+- ECN-based Mitigation of Congestion in Urban Traffic Networks - *Levente Alekszejenkó and Tadeusz P. Dobrowiecki* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=5tsTcpOLrLY) • [<i class="far fa-file-pdf"></i> Paper](../documents/2020/SUMO2020_paper_26.pdf)
+- Extending the Intelligent Driver Model in SUMO and Verifying the Drive Off Trajectories with Aerial Measurements - *Dominik Salles, Stefan Kaufmann and Hans-Christian Reuss* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=0VuSguxDVv8) • [<i class="far fa-file-pdf"></i> Paper](../documents/2020/SUMO2020_paper_28.pdf)
 - A Slipstreaming Model for Cooperative Driving Simulations in SUMO - *Andrea Stedile and Michele Segata* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=ihjJ-9O-tq0)
 
 ---
 
 **Session 5: Real-world Scenarios**
 
-- SAGA: An Activity-based Multi-modal Mobility Scenario Generator for SUMO - *Lara Codeca, Jakob Erdmann, Vinny Cahill and Jérôme Härri* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=b-ZvQ0XbVvM) • [<i class="far fa-file-pdf"></i> Paper](https://sumo.dlr.de/2020/SUMO2020_paper_20.pdf)
-- InTAS - The Ingolstadt Traffic Scenario for SUMO - *Silas Lobo, Stefan Neumeier, Evelio Fernandez and Christian Facchi* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=UgPeBxXzDHc) • [<i class="far fa-file-pdf"></i> Paper](https://sumo.dlr.de/2020/SUMO2020_paper_24.pdf)
-- Estimation of Green House Gas and Contaminant Emissions from Traffic by microsimulation and refined Origin-Destination matrices: a methodological approach - *Jorge E. Luzuriaga, Juan A. Moreno, Edgar Lorenzo Sáez, Santiago Mira Prats, Javier Fermín Urchueguía, Lenin Guillermo Lemus Zúñiga, José Vicente Oliver Villanueva and Miguel A. Mateo Pla* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=YsLTs8KcFF4) • [<i class="far fa-file-pdf"></i> Paper](https://sumo.dlr.de/2020/SUMO2020_paper_12.pdf)
+- SAGA: An Activity-based Multi-modal Mobility Scenario Generator for SUMO - *Lara Codeca, Jakob Erdmann, Vinny Cahill and Jérôme Härri* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=b-ZvQ0XbVvM) • [<i class="far fa-file-pdf"></i> Paper](../documents/2020/SUMO2020_paper_20.pdf)
+- InTAS - The Ingolstadt Traffic Scenario for SUMO - *Silas Lobo, Stefan Neumeier, Evelio Fernandez and Christian Facchi* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=UgPeBxXzDHc) • [<i class="far fa-file-pdf"></i> Paper](../documents/2020/SUMO2020_paper_24.pdf)
+- Estimation of Green House Gas and Contaminant Emissions from Traffic by microsimulation and refined Origin-Destination matrices: a methodological approach - *Jorge E. Luzuriaga, Juan A. Moreno, Edgar Lorenzo Sáez, Santiago Mira Prats, Javier Fermín Urchueguía, Lenin Guillermo Lemus Zúñiga, José Vicente Oliver Villanueva and Miguel A. Mateo Pla* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=YsLTs8KcFF4) • [<i class="far fa-file-pdf"></i> Paper](../documents/2020/SUMO2020_paper_12.pdf)
 
 ---
 
@@ -80,7 +80,7 @@ DOI: https://doi.org/10.52825/scp.v1i
 
 - Calibration of car-following models by using drone videos of a real-world intersection - *András Zsámboki, Jiao Li and Zoltán Baksa* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=n-vpGqCq-6k)
 - Generating and calibrating large-scale, mesoscopic SUMO network - *Sasan Amini, Lukas Ambühl, Gabriel Tilg, Klaus Bogenberger and Monica Menendez* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=ODMVjgf-Lrw)
-- Action-points in human driving and in SUMO - *Peter Wagner, Jakob Erdmann and Ronald Nippold* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=fc_GuHvoOxo) • [<i class="far fa-file-pdf"></i> Paper](https://sumo.dlr.de/2020/SUMO2020_paper_21.pdf)
+- Action-points in human driving and in SUMO - *Peter Wagner, Jakob Erdmann and Ronald Nippold* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=fc_GuHvoOxo) • [<i class="far fa-file-pdf"></i> Paper](../documents/2020/SUMO2020_paper_21.pdf)
 
 ---
 
