fixing more links

--- a/src/content/2014.md
+++ b/src/content/2014.md
@@ -10,7 +10,9 @@ draft: false
 ---
 
 # Introduction
-The SUMO2014 Conference was attended by over 50 participants from throughout Europe and America which presented two days of simulation results but also technical enhancements and new usage scenarios of the open source microscopic traffic simulation ([Here](../documents/2014/Proceeding_SUMO2014_15+16May2014_Berlin-Adlershof.pdf) you can find the conference proceedings). A highlight was the keynote speaker Mario Krumnow (Technical University Dresden), who talked about "Modeling Mobility with Open Data" (here you can find his [presentation](../documents/2014/Krumnow-OpenData2014.pdf) and [simulation](../documents/2014/Krumnow-Simulation.zip)). The program was rounded off by numerous discussions on the edge and a panel discussion, which will promote further exchanges among other simulation scenarios.
+The SUMO2014 Conference was attended by over 50 participants from throughout Europe and America which presented two days of simulation results but also technical enhancements and new usage scenarios of the open source microscopic traffic simulation ([Here](../documents/2014/Proceeding_SUMO2014_15+16May2014_Berlin-Adlershof.pdf) you can find the conference proceedings).
+A highlight was the keynote speaker Mario Krumnow (Technical University Dresden), who talked about "Modeling Mobility with Open Data" (here you can find his [presentation](../documents/2014/Presentation_Keynote_Open%20data%202014_MarioKrumnow.pdf) and [simulation](../documents/2014/Krumnow-Simulation.zip)).
+The program was rounded off by numerous discussions on the edge and a panel discussion, which will promote further exchanges among other simulation scenarios.
 
 **All those who contributed to the SUMO2014 conference:**   
 **Thank you for all your excellent work!**
